--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ header .navbar div .navbar-nav .nav-item .nav-icon img {
 }
 
 .main {
-  margin: 1rem;
+  margin: 5rem 1rem 1rem;
   background: var(--gray);
   border-radius: 5px;
   padding: 1rem;
@@ -75,10 +75,6 @@ header .navbar div .navbar-nav .nav-item .nav-icon img {
 }
 
 footer {
-  position: relative;
-  bottom: 1rem;
-  left: 0;
-  width: 100vw;
   padding-left: 1rem;
   font-weight: 300;
   font-size: 0.9rem;
