--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@300;400;700&display=swap");
 
 * {
   margin: 0;
@@ -16,92 +16,152 @@
   --blue-gradient-right: linear-gradient(to right, #09203f 0%, #537895 100%);
 }
 
-body, html {
-  font-family: 'Roboto';
+body,
+html {
+  font-family: "Roboto";
 }
 
-header .navbar {
-  background: var(--blue-gradient-right);
-  padding: 0;
-}
-
-header .navbar .navbar-brand {
-  font-family: 'Lobster';
-  background-color: var(--dark-blue);
-  padding: 1rem;
-  width: 200px;
-  font-size: 1.5rem;
+.header {
+  font-size: 1.3rem;
   font-weight: 300;
+  font-family: "Lobster";
 }
 
-header .navbar .nav-user {
+nav {
+  background: var(--blue-gradient-right);
   gap: 1em;
 }
 
-header .navbar .nav-user .user-icon img {
+.nav-header {
+  margin-bottom: 0;
+}
+
+.nav-user {
+  gap: 1em;
+}
+
+.user-icon img {
   width: 50px;
 }
 
-header .navbar .navbar-collapse {
+.nav-icon {
+  cursor: pointer;
+  font-size: 1.5rem;
+  opacity: 0.7;
+}
+
+.sidebar {
   position: fixed;
-  top: 4.2em;
-  left: 0em;
-  min-width: 100%;
-}
-
-header .navbar div .navbar-nav {
   background: var(--blue-gradient-top);
+  color: #fff;
+  top: 5em;
+  left: -20em;
+  border-radius: 10px;
+  box-shadow: 3px 3px 4px 4px rgb(0 0 0 / 20%);
+  height: 85vh;
+  transition: left ease-in 0.8s;
 }
 
-header .navbar div .navbar-nav .nav-item {
+.left {
+  left: 0.5em;
+  /* transition: left ease-in 1s; */
+}
+
+.sidebar-header {
+  padding: 1rem 2rem;
+}
+
+.close-sidebar {
+  display: block;
+}
+
+.close-sidebar i {
+  position: absolute;
+  top: 0.5em;
+  right: 0.5em;
+  font-size: 1.3rem;
+  color: #fff;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.close-sidebar i:hover {
+  opacity: 0.8;
+}
+
+.sidebar hr {
+  margin: 0;
+  border-color: #fff6;
+}
+
+.sidebar ul {
+  list-style: none;
+  padding: 1rem;
+}
+
+.sidebar ul li {
+  padding: 0.5rem 3rem 0.5rem 0.5rem;
+  margin-bottom: 0.5rem;
   gap: 1em;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 0.9rem;
 }
 
-header .navbar div .navbar-nav .nav-item .nav-icon img {
+.sidebar ul li:hover {
+  background: #a23b72;
+}
+
+.li-icon svg {
   width: 30px;
+  height: 30px;
+}
+
+.sidebar ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+
+/* Media Query for Sidebar */
+@media screen and (min-width: 768px) {
+  .sidebar {
+    left: 0.5em;
+  }
+
+  .left {
+    left: -20em;
+  }
+
+  .close-sidebar {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .sidebar ul {
+    padding: 1rem 1.5rem;
+  }
 }
 
 .main {
-  margin: 5rem 1rem 1rem;
   background: var(--gray);
+  height: 70vh;
+  margin: 5rem 1rem 1rem;
   border-radius: 5px;
-  padding: 1rem;
-  height: 500px;
-  transition: all ease 0.5s;
-}
-
-.narrow-main {
-  margin-left: 1rem !important;
 }
 
 footer {
-  padding-left: 1rem;
-  font-weight: 300;
   font-size: 0.9rem;
-  transition: all ease 0.5s;
+  font-weight: 300;
 }
 
-.narrow-footer {
-  padding-left: 1rem;
+.log-out {
+  width: 13ch;
 }
 
-@media screen and (min-width: 480px) {
-  header .navbar .navbar-brand {
-    width: 300px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  header .navbar .navbar-collapse {
-    min-width: 300px;
-  }
-  header .navbar div .navbar-nav {
-    height: 100vh;
-  }
-  .narrow-main {
-    margin-left: 20rem !important;
-  }
-  .narrow-footer {
-    padding-left: 330px;
+/* Media Query for Main */
+@media screen and (min-width: 990px) {
+  .main {
+    margin-left: 300px;
   }
 }
