--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ html {
 }
 
 .header {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   font-weight: 300;
   font-family: "Lobster";
 }
@@ -61,6 +61,28 @@ nav {
   box-shadow: 3px 3px 4px 4px rgb(0 0 0 / 20%);
   height: 85vh;
   transition: left ease-in 0.8s;
+  max-height: 100vh;
+  overflow-y: hidden;
+}
+
+.sidebar:hover {
+  overflow-y: auto;
+}
+
+.sidebar::-webkit-scrollbar {
+  width: 5px;
+}
+
+.sidebar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+  background: #a23b72;
+}
+
+.sidebar::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 .left {
@@ -98,6 +120,7 @@ nav {
 .sidebar ul {
   list-style: none;
   padding: 1rem;
+  margin: 0;
 }
 
 .sidebar ul li {
@@ -164,4 +187,28 @@ footer {
   .main {
     margin-left: 300px;
   }
+}
+
+/* Start Copying from here */
+.sub-header {
+  margin: 1rem 1.5rem 0.5rem;
+  font-size: 1.3rem;
+}
+
+.sub-header h3 {
+  font-weight: 300;
+  font-size: 1.3rem;
+  margin: 0;
+}
+
+.sub-header i {
+  cursor: pointer;
+}
+
+.sidebar .admin-ul, .sidebar .master-ul {
+  padding: 0.5rem 1.5rem;
+}
+
+.hide {
+  display: none !important;
 }
